data/derived/fa15/progs/unify/prog1791.ml.out
Characters 25-37:
  let _ = assoc([1,1],"a",[("ca",[1,2]),("a",[1,1,1])]);;
                           ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
